[project]
name = "csce-5290-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "hf-xet>=1.0.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
